# speed_optimization_pkg

./: CMakeLists.txt  README.md  package.xml
config/: Traj.txt  limits.yaml
include/speed_optimization_pkg/: speed_optimization_client.h  speed_optimization_server.h
launch/: speed_optm.launch  speed_optm_client.launch
src/: speed_optm.cpp  speed_optm_client.cpp  speed_optm_client_main.cpp  speed_optm_main.cpp  speed_optm_server_main.cpp
srv/: TrajectoryOptimization.srv
