<?xml version="1.0"?>
<package>
  <name>speed_optimization_pkg</name>
  <version>0.0.0</version>
  <description>The speed_optimization_pkg package</description>

  <maintainer email="alessandropalleschi94@gmail.com">Alessandro Palleschi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
